src/tedi/components/form/textfield/textfield.module.scss
@use '@tedi-design-system/core/bootstrap-utility/breakpoints';
@use '@tedi-design-system/core/mixins';
@use 'sass:map';

$input-height-large: 3.5rem;
$input-padding-right-map: (
  default: (
    normal: 2rem,
    both: 4rem,
  ),
  small: (
    normal: 2rem,
    both: 4rem,
  ),
  large: (
    normal: 3.5rem,
    both: 6rem,
  ),
);

@function get-padding-right($size, $clearable, $icon) {
  @if $clearable and $icon {
    @return map.get(map.get($input-padding-right-map, $size), both);
  } @else if $clearable or $icon {
    @return map.get(map.get($input-padding-right-map, $size), normal);
  } @else {
    @return null;
  }
}

@mixin textfield-focus($border-color: null) {
  @if $border-color {
    &:focus,
    &:active {
      border-color: $border-color;
      outline: none;
      box-shadow: inset 0 0 0 1px $border-color;
    }
  } @else {
    &:focus,
    &:active {
      outline: none;
      box-shadow: none;
    }
  }
}

.tedi-textfield {
  width: 100%;
  max-width: 100%;

  @include mixins.print-grayscale;
}

.tedi-textfield__inner {
  position: relative;

  &:focus-visible {
    @include mixins.focus-element;
  }
}

.tedi-textfield__input {
  display: block;
  width: 100%;
  min-height: var(--form-field-height);
  padding: var(--form-field-padding-y-md-default) var(--form-field-padding-x-md-default);
  font-family: inherit;
  font-size: var(--body-regular-size);
  color: var(--form-input-text-filled);
  background-color: var(--form-input-background-default);
  border: 1px solid var(--form-input-border-default);
  border-radius: var(--form-field-radius);

  @include textfield-focus(var(--form-input-border-hover));

  &:hover {
    border-color: var(--form-input-border-hover);
  }

  &:disabled {
    color: var(--form-input-text-disabled);
    pointer-events: none;
    background-color: var(--form-input-background-disabled);
    border-color: var(--form-input-border-disabled);
  }

  .tedi-textfield--invalid &,
  &[aria-invalid='true'] {
    border-color: var(--form-general-feedback-error-border);

    @include textfield-focus(var(--form-general-feedback-error-border));
  }

  .tedi-textfield--valid & {
    border-color: var(--form-general-feedback-success-border);

    @include textfield-focus(var(--form-general-feedback-success-border));
  }

  &::placeholder {
    color: var(--form-input-text-placeholder);
    opacity: 1;
  }
}

@each $size in default, small, large {
  $selector: if($size == default, '.tedi-textfield', '.tedi-textfield--#{$size}');
  #{$selector} {
    $padding: get-padding-right($size, true, false);

    &.tedi-textfield--clearable .tedi-textfield__input {
      padding-right: get-padding-right($size, true, false);
    }

    &.tedi-textfield--with-icon .tedi-textfield__input {
      padding-right: get-padding-right($size, false, true);
    }

    &.tedi-textfield--clearable.tedi-textfield--with-icon .tedi-textfield__input {
      padding-right: get-padding-right($size, true, true);
    }

    @if $size == small {
      .tedi-textfield__input {
        height: var(--form-field-height-sm);
        min-height: var(--form-field-height-sm);
        padding: var(--form-field-padding-y-sm) var(--form-field-padding-x-md-default);
        font-size: var(--body-regular-size);
      }
    } @else if $size == large {
      .tedi-textfield__input {
        min-height: $input-height-large;
        padding: var(--form-field-padding-y-lg) var(--form-field-padding-x-lg);

        @include breakpoints.media-breakpoint-down(md) {
          height: var(--form-field-height);
        }
      }
    }
  }
}

.tedi-textfield__right-area {
  position: absolute;
  top: 0;
  right: 0;
  display: flex;
  gap: var(--layout-grid-gutters-04);
  align-items: flex-start;
  height: 100%;
  padding: var(--form-field-padding-y-md-default) var(--form-field-padding-x-md-default);

  .tedi-textfield--small & {
    padding: var(--form-field-padding-y-sm) var(--form-field-padding-x-md-default);
  }

  .tedi-textfield--large & {
    padding: var(--form-field-padding-y-lg) var(--form-field-padding-x-lg);
  }
}

.tedi-textfield__icon-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  width: var(--icon-04);
  height: var(--icon-04);
  color: var(--form-input-text-filled);
  transition: color 0.2s ease;

  @include mixins.button-reset;

  &:not(div, :disabled):hover {
    color: var(--form-input-text-filled);
  }

  &:disabled {
    cursor: initial;
  }

  .tedi-textfield--inline & {
    padding: 2px 0.25rem;
  }

  .tedi-textfield__input[aria-invalid='true'] + & {
    color: var(--form-general-feedback-error-text);
  }
}

div.tedi-textfield__icon-wrapper {
  cursor: initial;
}

.tedi-textfield__icon {
  vertical-align: text-top;
}

.tedi-textfield__feedback-wrapper {
  display: flex;
}

.tedi-textfield__separator {
  max-height: 1.5rem;
}

